--- a/res/layout/activity_chapter.xml
+++ b/res/layout/activity_chapter.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="5dp"
+        android:background="#44ff00ff"
         android:orientation="vertical" >
 
         <TextView
