--- a/res/layout/activity_search.xml
+++ b/res/layout/activity_search.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
-    android:orientation="vertical">
-
+    android:orientation="vertical" >
+    
+    <include layout="@layout/top_search"/>
+    
     <ListView
-        android:id="@+id/id_listView"
+        android:id="@+id/id_listView_search"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:dividerHeight="3px">
     </ListView>
-
-
+    
 </LinearLayout>
