--- a/res/layout/top.xml
+++ b/res/layout/top.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
@@ -13,16 +13,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@android:color/white"
-        android:textSize="30sp"
+        android:layout_alignParentLeft="true"
+        android:gravity="center_vertical"
+        android:textSize="40sp"
+        android:layout_marginLeft="10dp"
         android:text="漫画屋"/>
     
-    <Button 
+    <Button
         android:id="@+id/id_btn_top_search"
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:layout_marginLeft="30dp"
-        android:text="查找"/>
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/ic_action_search" />
 
-</LinearLayout>
+</RelativeLayout>
