--- a/res/layout/activity_chapter.xml
+++ b/res/layout/activity_chapter.xml
@@ -9,11 +9,11 @@
         android:id="@+id/id_topBar"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        topbarcustom:leftText="Back"
+        topbarcustom:leftText="后退"
         topbarcustom:leftBackground="@drawable/blue_button"
         topbarcustom:leftTextColor="#FFFFFF"
         topbarcustom:rightBackground="@drawable/blue_button"
-        topbarcustom:rightText="More"
+        topbarcustom:rightText="更多"
         topbarcustom:rightTextColor="#FFFFFF"
         topbarcustom:title="自定义标题"
         topbarcustom:titleTextColor="#123412"
