--- a/res/layout/activity_content.xml
+++ b/res/layout/activity_content.xml
@@ -11,10 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         topbarcustom:leftBackground="@drawable/blue_button"
-        topbarcustom:leftText="Back"
+        topbarcustom:leftText="后退"
         topbarcustom:leftTextColor="#FFFFFF"
         topbarcustom:rightBackground="@drawable/blue_button"
-        topbarcustom:rightText="More"
+        topbarcustom:rightText="更多"
         topbarcustom:rightTextColor="#FFFFFF"
         topbarcustom:title="自定义标题"
         topbarcustom:titleTextColor="#123412"
