--- a/res/layout/frag_first.xml
+++ b/res/layout/frag_first.xml
@@ -15,7 +15,10 @@
         android:horizontalSpacing="@dimen/image_thumbnail_spacing"
         android:numColumns="auto_fit"
         android:stretchMode="columnWidth"
-        android:verticalSpacing="@dimen/image_thumbnail_spacing" >   
+        android:verticalSpacing="@dimen/image_thumbnail_spacing"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:paddingTop="5dp" >   
         
     </GridView>
     
