--- a/res/layout/photo_layout.xml
+++ b/res/layout/photo_layout.xml
@@ -1,7 +1,9 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    android:paddingBottom="10dp"
+    android:orientation="vertical" >
 
     <ImageView 
         android:id="@+id/id_photo"
@@ -10,5 +12,14 @@
         android:layout_centerInParent="true"
         android:src="@drawable/empty_photo"
         android:scaleType="fitXY"/>
+    
+    <TextView 
+        android:id="@+id/id_firsttab_manhua_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:singleLine="true"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@android:color/black"
+        android:text="漫画名称"/>
 
-</RelativeLayout>
+</LinearLayout>
