--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,23 +2,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#C5EABD"
     android:orientation="vertical" >
-    
-    <include layout="@layout/top"/>
-    
-    <com.viewpagerindicator.TabPageIndicator
-        android:id="@+id/id_tabPageIndicator"
+
+    <include layout="@layout/top" />
+
+    <FrameLayout
+        android:id="@+id/id_content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent">
-    </com.viewpagerindicator.TabPageIndicator>
-    
-    <android.support.v4.view.ViewPager
-        android:id="@+id/id_viewPager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </android.support.v4.view.ViewPager>
-    
+        android:layout_height="0dp"
+        android:layout_weight="1" >
+    </FrameLayout>
+
+    <include layout="@layout/bottom" />
 
 </LinearLayout>
