--- a/res/layout/frag_first.xml
+++ b/res/layout/frag_first.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:gravity="center_horizontal"
     android:background="@android:color/white"
     android:orientation="vertical" >
     
@@ -17,8 +17,7 @@
         android:stretchMode="columnWidth"
         android:verticalSpacing="@dimen/image_thumbnail_spacing"
         android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:paddingTop="5dp" >   
+        android:paddingRight="5dp" >
         
     </GridView>
     
