--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="state_item_pressed">#44ff0000</color>
     <color name="state_item_normal">#44ff0000</color>
     
+    <color name="setting_pressed">#44ff0000</color>
+    <color name="setting_normal">#ffffffff</color>
+    
 </resources>
